<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.DetailActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_item"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cooffee"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="53dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:text="@string/name"
        android:fontFamily="@font/alex_brush"
        app:layout_constraintStart_toStartOf="@+id/image_item"
        tools:layout_editor_absoluteY="68dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/image_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allan"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="@+id/image_item"
        tools:layout_editor_absoluteX="337dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>