<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:focusable="true"
    android:clickable="true"
    android:elevation="20dp"
    app:cardCornerRadius="40dp"
    android:background="@color/teal_200"
    app:cardElevation="30dp"
    app:contentPadding="5dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_item"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        tools:srcCompat="@tools:sample/avatars">

    </de.hdodenhof.circleimageview.CircleImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="5dp"
            android:text="Name Item"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_descriptionItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:text="@string/description"
            android:textColor="@color/grey"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_priceItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="5dp"
                android:text="@string/price"
                android:textColor="@color/DarkBrown"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btn_addCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:background="@drawable/design_tab"
                android:text="@string/add_to_card" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>